--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -1024,7 +1024,22 @@
     "# Plot heatmaps for each metric\n",
     "plot_heatmap(D_euclidean, \"Pairwise Euclidean Distance Heatmap\")\n",
     "plot_heatmap(D_manhattan, \"Pairwise Manhattan Distance Heatmap\")\n",
-    "plot_heatmap(D_cosine,    \"Pairwise Cosine Distance Heatmap\")\n"
+    "plot_heatmap(D_cosine,    \"Pairwise Cosine Distance Heatmap\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "latex"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "The euclidean and manhattan distances are quite similar in terms. But we see the cosign is vert different. This is because the cosine distance measures the angle between two vectors, while the euclidean and manhattan distances measure the absolute differences in their coordinates. In high-dimensional spaces, vectors can be very far apart in terms of euclidean or manhattan distance but still have a small angle between them, leading to a small cosine distance. This is particularly relevant in text data, where documents can have many unique words (dimensions) but still be similar in content (direction). It is better for text and image data. "
    ]
   },
   {
